# DVR-Scan

./: .gitignore  .readthedocs.yaml  .travis.yml  404.html  CNAME  Dockerfile  LICENSE  LICENSE-THIRDPARTY  MANIFEST.in  README.md  appveyor.yml  dvr-gui.py  dvr-scan.cfg  dvr-scan.py  index.html  mkdocs.yml  package-info.rst  pyproject.toml  requirements.txt  requirements_headless.txt  setup.cfg  setup.py  style.css
.github/ISSUE_TEMPLATE/: bug-or-issue-report.md  feature-or-enhancement-request.md
.github/actions/setup-ffmpeg/: action.yml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows-cuda.yml  build-windows.yml  build.yml  check-code-format.yml  publish-pypi.yaml  publish-pypi.yml  scorecard.yml  screenshot.yml  update-site.yml
changelog/: index.html
docs/: changelog.md  contributing.md  copyright.md  docs.md  download.md  faq.md  guide.md  index.html  index.md  index_docs.md  mkdocs.yml  requirements.txt  resources.md  style.css
docs/guide/: config_file.md  examples.md  faq.md  installing.md  options.md  quickstart.md
docs/other/: similar_software.md
download/: index.html
dvr_scan/: LICENSE  LICENSE-THIRDPARTY  __init__.py  __main__.py  cli.py  config.py  context.py  controller.py  detector.py  encoder.py  motion_detector.py  opencv_loader.py  overlays.py  platform.py  presets.py  region.py  report.py  scanner.py  selection_window.py  subtractor.py  timecode.py  video_input.py  video_joiner.py
dvr_scan/app/: __init__.py  __main__.py  about_window.py  application.py  common.py  region_editor.py  scan_window.py  thumbnails.py  video_list.py  widgets.py  wizard.py
dvr_scan/cli/: __init__.py  config.py  controller.py
dvr_scan/docs/: 404.html  changelog.html  docs.html  faq.html  guide.html  index.html  resources.html  style.min.css
dvr_scan/docs/assets/javascripts/: bundle.220ee61c.min.js  bundle.88dd0f4e.min.js
dvr_scan/scanner/: __init__.py  roi.py
dvr_scan/shared/: __init__.py  cli.py  settings.py
faq/: index.html
gui/: CoordInput.py  PreviewImage.py  RoiSelector.py  ScanningWindow.py  SettingsWindow.py  args.py  scanning.py  settings.py
guide/: index.html
index_docs/: index.html
resources/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_cli.py  test_encode_mode.py  test_encoder.py  test_maxarea.py  test_presets.py  test_report.py  test_scan_context.py  test_thumbnails.py  test_video_input.py  test_video_joiner.py  test_video_list.py  test_wizard.py
tests/resources/: ATTRIBUTION.txt  COPYRIGHT.txt  issue53_brightness_change.avi  traffic_camera.txt
website/: mkdocs.yml  requirements.txt
website/overrides/partials/: content.html  copyright.html
