
[metadata]
name = dvr-scan
version = attr: dvr_scan.__version__
license = BSD 2-Clause License
author = Brandon Castellano
author_email = brandon248@gmail.com
description = Tool for finding and extracting motion events in video files (e.g. security camera footage).
long_description = file: dist/package-info.rst
long_description_content_type = text/x-rst
url = https://dvr-scan.readthedocs.io/
project_urls =
    Homepage = https://dvr-scan.readthedocs.io/
    Repository = https://github.com/Breakthrough/DVR-Scan
    Documentation = https://dvr-scan.readthedocs.io/en/latest/guide/examples/
    Bug Tracker = https://github.com/Breakthrough/DVR-Scan/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Console :: Curses
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Conversion
    Topic :: Multimedia :: Video :: Non-Linear Editor
    Topic :: Utilities
keywords = video computer-vision analysis

[options]
install_requires =
    appdirs
    numpy
    scenedetect
    screeninfo
    tqdm
packages =
    dvr_scan
    dvr_scan.cli
python_requires = >=3.7

[options.extras_require]
opencv = opencv-python
opencv-headless = opencv-python-headless

[options.entry_points]
console_scripts =
    dvr-scan = dvr_scan.__main__:main

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
python_files = tests/*.py
