#
#      DVR-Scan: Video Motion Event Detection & Extraction Tool
#   --------------------------------------------------------------
#       [  Site: https://www.dvr-scan.com/                 ]
#       [  Repo: https://github.com/Breakthrough/DVR-Scan  ]
#
# Copyright (C) 2016 Brandon Castellano <http://www.bcastell.com>.
#

[metadata]
name = DVR-Scan
version = attr: dvr_scan.__version__
license = BSD 2-Clause License
author = Brandon Castellano
author_email = brandon248@gmail.com
description = Tool for finding and extracting motion events in video files (e.g. security camera footage).
long_description = file: dist/package-info.rst
long_description_content_type = text/x-rst
url = https://www.dvr-scan.com/
project_urls =
    Homepage = https://www.dvr-scan.com/
    Repository = https://github.com/Breakthrough/DVR-Scan
    Documentation = https://www.dvr-scan.com/docs
    Bug Tracker = https://github.com/Breakthrough/DVR-Scan/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Console :: Curses
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Conversion
    Topic :: Multimedia :: Video :: Non-Linear Editor
    Topic :: Utilities
keywords = video computer-vision analysis

[options]
install_requires =
    numpy
    platformdirs
    scenedetect
    screeninfo
    tqdm
    opencv-python
    opencv-contrib-python
    pillow
packages =
# Main application
    dvr_scan
    dvr_scan.app
    dvr_scan.shared
# Documentation (minified HTML without images to keep package download size small)
    dvr_scan.docs
    dvr_scan.docs.assets
    dvr_scan.docs.assets.javascripts
    dvr_scan.docs.assets.stylesheets
python_requires = >=3.9
include_package_data = True

[options.entry_points]
console_scripts =
    dvr-scan = dvr_scan.__main__:main
    dvr-scan-app = dvr_scan.app.__main__:main

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
python_files = tests/*.py
